--- a/app/src/main/res/layout/activity_new_post.xml
+++ b/app/src/main/res/layout/activity_new_post.xml
@@ -133,7 +133,7 @@
                     app:cpb_textComplete="Complete"
                     app:cpb_textError="Error"
                     android:padding="0dp"
-                    app:cpb_textIdle="browser.."
+                    app:cpb_textIdle="browse.."
                     android:layout_centerHorizontal="true"
                     android:textAllCaps="false"
                     app:cpb_selectorIdle="@drawable/login_button"/>
