--- a/app/src/main/res/layout/comment_card_view.xml
+++ b/app/src/main/res/layout/comment_card_view.xml
@@ -7,24 +7,54 @@
     <android.support.v7.widget.CardView
         android:id="@+id/commentCard"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5sp"
+        android:layout_marginRight="5sp"
+        android:layout_marginTop="3sp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/postedUser"
+            <LinearLayout
+                android:layout_marginTop="2sp"
+                android:layout_marginBottom="2sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20sp"/>
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/postedUser"
+                    android:textStyle="bold"
+                    android:textColor="@color/colorPrimary"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="an jing"
+                    android:layout_marginLeft="10sp"/>
+
+                <ImageView
+                    android:layout_marginLeft="130sp"
+                    android:layout_marginTop="3sp"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
+                    android:src="@drawable/access_time_logo"/>
+                <TextView
+                    android:id="@+id/datePosted"
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+                    android:text="anj"
+                    android:textColor="@color/colorPrimary"
+                    android:layout_marginLeft="10sp"
+                    />
+
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/postContent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20sp"/>
+                android:layout_marginLeft="10sp"/>
 
         </LinearLayout>
 
