--- a/app/src/main/res/layout/post_detail_header_view.xml
+++ b/app/src/main/res/layout/post_detail_header_view.xml
@@ -156,11 +156,10 @@
                         android:textColor="@color/white"
                         android:textSize="12sp"
                         app:cpb_cornerRadius="30dp"
-                        app:cpb_textComplete="Complete"
-                        app:cpb_textError="Error"
                         app:cpb_textIdle="2"
                         android:layout_centerHorizontal="true"
-                        app:cpb_selectorIdle="@color/colorAccent"
+                        app:cpb_selectorIdle="@color/black_overlay"
+                        app:cpb_selectorComplete="@color/colorAccent"
                         android:layout_marginLeft="10sp"
                         android:drawableTop="@drawable/up_logo"
                         android:drawableTint="@color/white" />
@@ -172,11 +171,10 @@
                         android:textColor="@color/white"
                         android:textSize="12sp"
                         app:cpb_cornerRadius="30dp"
-                        app:cpb_textComplete="Complete"
-                        app:cpb_textError="Error"
                         app:cpb_textIdle="23"
                         android:layout_centerHorizontal="true"
                         app:cpb_selectorIdle="@color/black_overlay"
+                        app:cpb_selectorComplete="@color/colorAccent"
                         android:layout_marginLeft="20sp"
                         android:drawableTop="@drawable/down_logo"
                         android:drawableTint="@color/colorPrimary"/>
