--- a/app/src/main/res/menu/menu_discover.xml
+++ b/app/src/main/res/menu/menu_discover.xml
@@ -8,7 +8,8 @@
         android:title="Search"
         android:orderInCategory="1"
         android:icon="@drawable/discover_white_logo"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom|collapseActionView"
+        app:actionViewClass="android.support.v7.widget.SearchView"/>
     <item
         android:id="@+id/menu_account_setting"
         android:title="Account Setting"
