--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -138,6 +138,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/googleSignIn"
             android:layout_width="50sp"
             android:layout_marginTop="50sp"
             android:layout_height="50sp"
@@ -155,6 +156,7 @@
             />
 
         <ImageView
+            android:id="@+id/facebookSignIn"
             android:layout_width="50sp"
             android:layout_marginTop="50sp"
             android:layout_height="50sp"
