--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -10,8 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/feedsRecyclerView"
+        <android.widget.ListView
+            android:id="@+id/feedListView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
